--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "baml-py>=0.89.0",
     "gdcm>=1.1",
     "numpy>=2.2.6",
     "pandas>=2.2.3",
@@ -14,5 +13,8 @@ dependencies = [
     "pydicom>=3.0.1",
     "pynetdicom>=2.1.1",
     "python-dotenv>=1.1.0",
+    "scikit-learn>=1.7.1",
     "tenacity>=9.1.2",
+    "torch>=2.8.0",
+    "torchvision>=0.23.0",
 ]
