--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "pillow>=11.2.1",
     "pydantic>=2.11.5",
     "pydicom>=3.0.1",
+    "pylibjpeg>=2.0.1",
+    "pylibjpeg-libjpeg>=2.3.0",
     "pynetdicom>=2.1.1",
     "python-dotenv>=1.1.0",
     "python-multipart>=0.0.20",
